test/success/implicits/implicit_self_only/main.sk
module Main {

class Foo {
    fn foo(self) -> Self {
        self
    }
}

fn main() {
    let mut foo = Foo();
    foo.foo();
}

}