test/errors/invalid_method_receiver/main.sk
module Main {

class Foo {
    fn method(self) {

    }
}

fn main() {
    let foo = Foo();
    foo.method();
    let ref = &foo;
    ref.method();
}

}